--- a/UnitTestShapes/UnitTestShapes.csproj
+++ b/UnitTestShapes/UnitTestShapes.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -45,13 +46,28 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="QuadrilateralTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SquareTest.cs" />
+    <Compile Include="RectangleTest.cs" />
+    <Compile Include="ShapeTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Shape\Shapes.csproj">
+      <Project>{9a9a52f1-bd2a-4e57-99df-7f113e6853ae}</Project>
+      <Name>Shapes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SharpShapes\SharpShapes.csproj">
+      <Project>{6bf17cd4-4d98-49ad-b704-5644d718f7b0}</Project>
+      <Name>SharpShapes</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
